# elmyra

./: .gitignore  .stylintrc  CHANGELOG.md  Cargo.toml  LIB_SPECS.md  LICENSE  README.md  blender_generate.py  blender_import.py  blender_render.py  blender_renderer.py  blender_update.py  build.js  camera.py  common.py  configuration.py  export.py  generator-blender.py  gulpfile.js  main.js  main.py  media.py  meta.py  modifier.py  package-lock.json  package.json  render.py  renderer-blender.py  renderer.py  requirements.txt  server.js  server.py  style.py  update.py  updater-blender.py  updater.py  version.py
icons/: elmyra.icns
src/assets/: index.html
src/javascript/: application.js  main.js  navigation.js  preview.js
src/js/: main.js  preview.js
src/jsx/: application.jsx  download-button.jsx  embed-button.jsx  embed-field.jsx  main.jsx  navigation.jsx  preview.jsx  update-button.jsx  versions.jsx  visualization.jsx  visualizations.jsx
src/linux/: dev-server.run  elmyra.run  library.json  library.py  renderer.run  server.run
src/macos/: dev-server.run  elmyra.run  library.json  library.py  renderer.run  server.run
src/osx/: dev-server.run  renderer.run  server.run
src/python/: generate.py  import.py  legacy_updater.py  render.py  renderer.py  update.py
src/rust/: args.rs  build.rs  context.rs  internal_routes.rs  main.rs  meta.rs  process.rs  public_routes.rs  renderer.rs  uuid.rs
src/scss/: base.scss  main.scss  navigation.scss  preview.scss  (+1 more)
static/: custom.css  custom.js  custom.jsx  index.html
templates/: base.html  index.html  new.html
(+86 files in other folders)
